21 Несуществующие маршруты. Лоадер для загрузки страниц

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,10 @@
 {
-  "Тестовый пример": "Test example",
-  "Перевод": "Translate",
-  "Язык": "English"
+    "Перевод": "Translate",
+    "Язык": "English",
+    "Главная": "Main",
+    "О сайте": "About us",
+    "Страница не найдена": "Page not found",
+    "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+    "Обновить страницу": "Обновить страницу",
+    "throw error": "throw error"
 }
