--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,10 @@
 {
-  "Тестовый пример": "Тестовый пример",
-  "Перевод": "Перевод",
-  "Язык": "Русский"
+    "Перевод": "Перевод",
+    "Язык": "Русский",
+    "Главная": "Главная",
+    "О сайте": "О сайте",
+    "Страница не найдена": "Страница не найдена",
+    "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+    "Обновить страницу": "Обновить страницу",
+    "throw error": "throw error"
 }
