28 Сайдбар. Состояния кнопки. UI Screenshot test report

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,5 +7,6 @@
     "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
     "Обновить страницу": "Обновить страницу",
     "throw error": "throw error",
-    "Переключить": "Switch"
+    "Переключить": "Switch",
+    "Короткий язык": "En"
 }
