29 Модальное окно. Portal

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -8,5 +8,6 @@
     "Обновить страницу": "Обновить страницу",
     "throw error": "throw error",
     "Переключить": "Switch",
-    "Короткий язык": "En"
+    "Короткий язык": "En",
+    "Войти": "Sign In"
 }
