--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,5 +8,6 @@
     "Обновить страницу": "Обновить страницу",
     "throw error": "throw error",
     "Переключить": "Переключить",
-    "Короткий язык": "Ru"
+    "Короткий язык": "Ru",
+    "Войти": "Войти"
 }
