30 Redux-toolkit. Entity. Тесты на всех уровнях

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -9,5 +9,7 @@
     "throw error": "throw error",
     "Переключить": "Переключить",
     "Короткий язык": "Ru",
-    "Войти": "Войти"
+    "Войти": "Войти",
+    "increment": "Добавить",
+    "decrement": "Уменьшить"
 }
