--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,5 +9,7 @@
     "throw error": "throw error",
     "Переключить": "Switch",
     "Короткий язык": "En",
-    "Войти": "Sign In"
+    "Войти": "Sign In",
+    "increment": "increment",
+    "decrement": "decrement"
 }
