32 Кастомный Input. Окно авторизации. Lazy modal

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,5 +11,7 @@
     "Короткий язык": "En",
     "Войти": "Sign In",
     "increment": "increment",
-    "decrement": "decrement"
+    "decrement": "decrement",
+    "Введите username": "Enter your name",
+    "Введите пароль": "Enter your password"
 }
