--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -11,5 +11,7 @@
     "Короткий язык": "Ru",
     "Войти": "Войти",
     "increment": "Добавить",
-    "decrement": "Уменьшить"
+    "decrement": "Уменьшить",
+    "Введите username": "Введите ваше имя",
+    "Введите пароль": "Введите ваш пароль"
 }
