--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -13,5 +13,8 @@
     "increment": "Добавить",
     "decrement": "Уменьшить",
     "Введите username": "Введите ваше имя",
-    "Введите пароль": "Введите ваш пароль"
+    "Введите пароль": "Введите ваш пароль",
+    "Форма авторизации": "Форма авторизации",
+    "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
+    "Выйти": "Выйти"
 }
