37 Страница профиля. Оптимизация перерисовок

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -16,5 +16,6 @@
     "Введите пароль": "Enter your password",
     "Форма авторизации": "Auth form",
     "Вы ввели неверный логин или пароль": "Uncorrect username or password",
-    "Выйти": "Exit"
+    "Выйти": "Exit",
+    "Профиль": "Profile"
 }
