41 Модуль профиля. Редактирование и сохранение.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,5 +17,6 @@
     "Форма авторизации": "Auth form",
     "Вы ввели неверный логин или пароль": "Uncorrect username or password",
     "Выйти": "Exit",
-    "Профиль": "Profile"
+    "Укажите валюту": "Choose currency",
+    "Укажите страну": "Choose country"
 }
