--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -16,6 +16,7 @@
     "Введите пароль": "Введите ваш пароль",
     "Форма авторизации": "Форма авторизации",
     "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
-    "Выйти": "Exit",
-    "Профиль": "Профиль"
+    "Выйти": "Выйти",
+    "Укажите валюту": "Укажите валюту",
+    "Укажите страну": "Укажите страну"
 }
