--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,22 +1,26 @@
 {
-    "Перевод": "Translate",
-    "Язык": "English",
-    "Главная": "Main",
-    "О сайте": "About us",
-    "Страница не найдена": "Page not found",
-    "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
-    "Обновить страницу": "Обновить страницу",
-    "throw error": "throw error",
-    "Переключить": "Switch",
-    "Короткий язык": "En",
-    "Войти": "Sign In",
-    "increment": "increment",
-    "decrement": "decrement",
-    "Введите username": "Enter your name",
-    "Введите пароль": "Enter your password",
-    "Форма авторизации": "Auth form",
-    "Вы ввели неверный логин или пароль": "Uncorrect username or password",
-    "Выйти": "Exit",
-    "Укажите валюту": "Choose currency",
-    "Укажите страну": "Choose country"
+  "Тестовый пример": "Test example",
+  "Перевод": "Translate",
+  "Главная страница": "Main page",
+  "Язык": "English",
+  "новый перевод": "новый перевод",
+  "Страница не найдена": "Page not found",
+  "Произошла непредвиденная ошибка": "An unexpected error has occurred",
+  "Обновить страницу": "Reload page",
+  "throw error": "throw error",
+  "Главная": "Main",
+  "О сайте": "About us",
+  "Переключить": "Переключить",
+  "Короткий язык": "En",
+  "Войти": "Login",
+  "increment": "increment",
+  "decrement": "decrement",
+  "Введите username": "Enter username",
+  "Введите пароль": "Enter password",
+  "Форма авторизации": "Auth form",
+  "Вы ввели неверный логин или пароль": "Uncorrect username or password",
+  "Выйти": "Logout",
+  "Укажите валюту": "Choose currency",
+  "Укажите страну": "Choose country",
+  "Профиль": "Profile"
 }
