--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,22 +1,26 @@
 {
-    "Перевод": "Перевод",
-    "Язык": "Русский",
-    "Главная": "Главная",
-    "О сайте": "О сайте",
-    "Страница не найдена": "Страница не найдена",
-    "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
-    "Обновить страницу": "Обновить страницу",
-    "throw error": "throw error",
-    "Переключить": "Переключить",
-    "Короткий язык": "Ru",
-    "Войти": "Войти",
-    "increment": "Добавить",
-    "decrement": "Уменьшить",
-    "Введите username": "Введите ваше имя",
-    "Введите пароль": "Введите ваш пароль",
-    "Форма авторизации": "Форма авторизации",
-    "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
-    "Выйти": "Выйти",
-    "Укажите валюту": "Укажите валюту",
-    "Укажите страну": "Укажите страну"
+  "Тестовый пример": "Тестовый пример",
+  "Перевод": "Перевод",
+  "Главная страница": "Главная страница",
+  "Язык": "Русский",
+  "новый перевод": "новый перевод",
+  "Страница не найдена": "Страница не найдена",
+  "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+  "Обновить страницу": "Обновить страницу",
+  "throw error": "throw error",
+  "Главная": "Главная",
+  "О сайте": "О сайте",
+  "Переключить": "Переключить",
+  "Короткий язык": "Ru",
+  "Войти": "Войти",
+  "increment": "increment",
+  "decrement": "decrement",
+  "Введите username": "Введите username",
+  "Введите пароль": "Введите пароль",
+  "Форма авторизации": "Форма авторизации",
+  "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
+  "Выйти": "Выйти",
+  "Укажите валюту": "Укажите валюту",
+  "Укажите страну": "Укажите страну",
+  "Профиль": "Профиль"
 }
